# jira-runner

./: .gitignore  CMakeLists.txt  JiraRunner.kdev4  Messages.sh
src/: CMakeLists.txt  jirarunner.cpp  jirarunner.h  plasma-runner-jirarunner.desktop
